// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


Table student {
  id integer [primary key]
  name varchar
  email varchar
  degree_program varchar
  school varchar
}

Table project {
  id integer [primary key]
  name varchar
  semester varchar
  year integer
  project_overview text
  final_presentation varchar
  award_id integer [ref: < "has_award"."recipient_id"]
  skill_required_id integer [ref: < "skill_or_software"."id"]
  topic_id integer [ref: < "topic"."id"]

}

Table project_has_student {
  project_id integer [ref: > project.id]
  student_id integer [ref: > student.id]
}

Table advisor {
  id integer [primary key]
  name varchar
  email varchar
  organization varchar
  title varchar
  primary_school varchar
}

Table project_has_advisor {
  project_id integer [ref: > project.id]
  advisor_id integer [ref: > advisor.id]
}


Table has_award {
  recipient_id integer [ref: > student.id]
  award integer
}


Table skill_or_software {
  id integer [primary key]
  name varchar
  type varchar
}

Table topic {
  id integer [primary key]
  name varchar
}
